Homework 09 (Petstore Api) is added